--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rijks Library",
+  "name": "Rijks-Library",
   "version": "1.0.0",
   "description": "PWA",
   "main": "app.js",
@@ -7,17 +7,25 @@
     "doc": "docs"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "node": "^17.7.1",
     "node-fetch": "^2.6.7"
   },
   "devDependencies": {
+    "@node-minify/cli": "^6.2.0",
+    "@node-minify/uglify-js": "^6.2.0",
     "dotenv": "^16.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
+    "prestart": "npm run build",
     "start": "nodemon app.js",
+    "build": "npm-run-all build:*",
+    "build:css": "cleancss -o static/css/style.css src/css/style-src.css",
+    "build:js": "node-minify --compressor uglify-js --input 'src/js/app-src.js' --output 'static/js/app.js'",
     "test": "test-commando"
   },
   "repository": {
