--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@node-minify/cli": "^6.2.0",
     "@node-minify/uglify-js": "^6.2.0",
+    "clean-css-cli": "^5.6.0",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5"
